--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,9 +7,11 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "semantic-ui-react": "^0.88.1",
     "typescript": "3.6.3"
   },
   "scripts": {
