--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"TokenKey": "super secret key",
+	"Logging": {
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	}
 }
